--- a/style.css
+++ b/style.css
@@ -20,9 +20,18 @@ body {
     margin: 20px 0;
   }
   
+  #options{ 
+    background-color: white;
+    padding: 1rem;
+  }
+
   #options button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 5px;
     padding: 10px 20px;
+    width:95%;
     font-size: 16px;
     cursor: pointer;
   }
